# DiverDataProcessor

./: .gitignore  README.md  environment.yml  pyproject.toml
DiverDataProcessor/: __init__.py  base.py  readers.py
DiverDataProcessor/figures/: __init__.py  visualisations.py
DiverDataProcessor/processing/: __init__.py  compensation.py
examples/: compensate.py
examples/data/: BARO.CSV  EXAMPLE_1.CSV  EXAMPLE_2.CSV  metadata.xlsx
tests/: conftest.py  test_compensation.py  test_readers.py
tests/data/: test_tddiver.csv
